2001-11-13  Mike Kestner <mkestner@speakeasy.net>

	* codegen/get-signals-from-source.pl : My own little perl signal 
	parser.  
	* codegen/gtk-signals.defs : Ripped the GtkWindow signals into here
	to goof with.

2001-11-10  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Fix String prop generation code.
	* gtk/Window.custom : Fix ctor param casting error.

2001-11-09  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Use the @ctors list to determine if a class
	is abstract.  There is an abstract indicator in the new defs format
	description, but it doesn't appear in the defs files currently. This
	method should be reliable though, even in the long term. Use the same
	check to determine if ctor(IntPtr obj) should be gen'd.

2001-11-09  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Now genning Window, AccelGroup, Bin, and
	GdkPixbuf classes to peel the csc error onion. Explicitly add GObject
	to the "exists ($objects{...})" branches, since GObject is a hard
	coded Class.

2001-11-08  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl : Build a structs hash and gen the structs
	after the first pass of the defs.  For structs and functions, mangle
	the 100s of params/fields named object to objekt. Insert using stmnts
	for structs too.
	* codegen/hardcoded.defs : Add GtkAccelEntry struct.

2001-11-07  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl (gen_object): Insert using statements. Insert 
	class members from corresponding .custom file.  
	* gtk/Window.custom : Renamed file from Window.cs.  Removed all the
	automatically generated members.  This will be the mechanism used to
	improve upon the mechanically generated binding.

2001-11-05  Mike Kestner <mkestner@speakeasy.net>

	* codegen/defs-parse.pl (gen_object): Generate a ctor (IntPtr obj) for
	every object.  This is a wrapper constructor for use by an Object
	manager which will be called by GLib.Object.GetObject eventually to