@@ -1,3 +1,11 @@
+2001-11-14  Mike Kestner <mkestner@speakeasy.net>
+
+	* codegen/defs-parse.pl : Add System.Collections to usings. 
+	s/event/signal. Add gen_signal sub and call it from gen_object.
+	Mangle method names that collide with signal names by prepending
+	Emit to the method name.
+	* codegen/makefile : add gtk-signals.defs to the build.
+
 2001-11-13  Mike Kestner <mkestner@speakeasy.net>
 
 	* codegen/get-signals-from-source.pl : My own little perl signal 
